--- a/Deep Learning.ipynb
+++ b/Deep Learning.ipynb
@@ -5,25 +5,32 @@
    "id": "84ab079f-2afe-4eb1-94f1-03691cde57df",
    "metadata": {},
    "source": [
-    "Deep Learning\n",
+    "# Diabetes Prediction with Deep Learning\n",
     "\n",
-    "Part 1: EDA and Data Processing\n",
-    "\n",
-    "- **1.2** Missing Values Analysis  \n",
-    "- **1.3** Deal with missing values  \n",
-    "- **1.4** Descriptive summary statistics  \n",
-    "- **1.5** Checking for outliers  \n",
-    "- **1.6** Outliers analysis conclusions  \n",
-    "- **1.7** Encode categorical features  \n",
-    "- **1.8** Visualize distributions by histograms  \n",
-    "- **1.9** Correlation matrix  \n",
-    "- **1.10** Distributions and correlation matrix analysis  \n",
-    "- **1.11** Standardize Numerical Features  \n",
-    "- **1.12** Data Processing  \n",
+    "## Part 1: EDA and Data Processing\n",
     "\n",
     "---\n",
     "\n",
-    "Part 2: Modeling"
+    "## Part 2:\n",
+    "\n",
+    "## Part 3: Classification with Torc\n",
+    "\n",
+    "- **3.1** Neural Network Model (1 hidden layer with 16 units, ReLU)  \n",
+    "- **3.2** Neural Network Models: Various Architectures  \n",
+    "- **3.3** Neural Network Models: Various Architectures Comparison  \n",
+    "  - Architecture & Performance Summary  \n",
+    "  - Conclusion  \n",
+    "  - Key Insights  \n",
+    "- **3.4** Optimizer Tuning for Best Architecture ([256, 128, 64, 32, 16], ReLU)  \n",
+    "- **3.4** Optimizer Comparison for Best Architecture ([256, 128, 64, 32, 16], ReLU)  \n",
+    "  - Conclusion  \n",
+    "  - Key Insights  \n",
+    "- **3.5** PyTorch Lightning for Best Architecture ([256, 128, 64, 32, 16], ReLU, SGD)  \n",
+    "- **3.5** PyTorch Manual and Lightning Comparison for Best Architecture ([256, 128, 64, 32, 16], ReLU, SGD)  \n",
+    "  - Conclusion  \n",
+    "- **3.6** 1D Convolution  \n",
+    "- **3.7** 2D Convolution  \n",
+    "- **3.8** Conclusions: 2D Convolution and Edge Detection  "
    ]
   },
   {
@@ -341,35 +348,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 115,
    "id": "a7c04531-2c6c-448a-a95e-e7e47ca3e39c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Core Libraries\n",
     "import copy\n",
+    "import warnings\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.impute import KNNImputer\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "import warnings\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from scipy.stats import zscore\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from PIL import Image\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
-    "# PyTorch\n",
+    "# Sklearn Utilities\n",
+    "from sklearn.impute import KNNImputer\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import f1_score\n",
+    "from scipy.stats import zscore\n",
+    "\n",
+    "# PyTorch Libraries\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "\n",
-    "# Import PyTorch Lightning\n",
+    "# PyTorch Lightning\n",
     "import pytorch_lightning as pl\n",
-    "from pytorch_lightning import Trainer\n",
-    "from sklearn.metrics import f1_score"
+    "from pytorch_lightning import Trainer"
    ]
   },
   {
@@ -877,13 +885,9 @@
   {
    "cell_type": "markdown",
    "id": "e6880cf3-b6ce-4584-8677-a4610f7f0dcd",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
-    "### **Conclusion from Histograms:**\n",
+    "Conclusion from Histograms:\n",
     "\n",
     "- **Pregnancies, Insulin, DiabetesPedigreeFunction, Age**: Highly right-skewed; may benefit from log transformation or normalization for better model performance.\n",
     "- **Glucose, SkinThickness, BMI, BloodPressure**: Roughly bell-shaped; scaling (e.g., StandardScaler) is sufficient.\n",
@@ -1021,13 +1025,9 @@
   {
    "cell_type": "markdown",
    "id": "f77ddfca-fc5b-4034-825b-aa28f25ecba9",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
-    "### Outliers Analysis\n",
+    "Outliers Analysis\n",
     "\n",
     "**BloodPressure** and **Insulin** have a **large number of high outliers** (45 by IQR, 35 and 18 by Z-score respectively). These could affect model performance and should be considered for:\n",
     "  - Removal\n",
@@ -1075,13 +1075,9 @@
   {
    "cell_type": "markdown",
    "id": "f1a31eee-89fc-44a9-86e3-6beae2304af7",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
-    "### Correlation Matrix Analysis\n",
+    "Correlation Matrix Analysis\n",
     "- **Glucose** has the strongest positive correlation with **Outcome** (`0.47`), suggesting it's a key predictor of diabetes.\n",
     "- There is **no multicollinearity** concern — no pair of features is highly correlated with each other (no values close to `1.0` off-diagonal), which is good for neural network modeling."
    ]
@@ -1089,13 +1085,9 @@
   {
    "cell_type": "markdown",
    "id": "467d8d17-8bff-4b0f-b810-3fc7e3c0b875",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
-    "## 2. Data Processing Summary\n",
+    "## 2. Data Processing Summary and Pipeline\n",
     "\n",
     "- Import dataset and manually defined column names.\n",
     "- No missing values (`NaN`) detected → no basic imputation needed.\n",
@@ -1103,7 +1095,7 @@
     "- All features are numerical → use **standardization**.\n",
     "- No highly correlated features → **no dimensionality reduction or feature removal** required.\n",
     "\n",
-    "### Possible Improvements:\n",
+    "Possible Improvements:\n",
     "- Apply **log transformation** to right-skewed features: `Pregnancies`, `Insulin`, `DiabetesPedigreeFunction`, `Age`.\n",
     "- Consider **log transformation or capping** for features with a large number of outliers: `BloodPressure`, `Insulin`.\n",
     "- Use **normalization** insted of **standardization**\n",
@@ -2389,7 +2381,7 @@
    "id": "028c0ea8-df1c-4131-a462-3f4be8297124",
    "metadata": {},
    "source": [
-    "### Conclusions: 2D Convolution and Edge Detection\n",
+    "### 3.8 Conclusions: 2D Convolution and Edge Detection\n",
     "\n",
     "1. Effect of Custom 2D Convolution\n",
     "- Our hand-written convolution function worked successfully on both RGB and grayscale images.\n",
