Minor TOB changes

--- a/Deep Learning.ipynb
+++ b/Deep Learning.ipynb
@@ -7,27 +7,19 @@
    "source": [
     "# Diabetes Prediction with Deep Learning\n",
     "\n",
-    "## Part 1: EDA and Data Processing\n",
+    "Part 1: EDA and Data Processing\n",
     "\n",
-    "---\n",
+    "Part 2: Data Processing Summary and Pipeline\n",
     "\n",
-    "## Part 2:\n",
-    "\n",
-    "## Part 3: Classification with Torc\n",
+    "Part 3: Classification with PyTorch\n",
     "\n",
     "- **3.1** Neural Network Model (1 hidden layer with 16 units, ReLU)  \n",
     "- **3.2** Neural Network Models: Various Architectures  \n",
     "- **3.3** Neural Network Models: Various Architectures Comparison  \n",
-    "  - Architecture & Performance Summary  \n",
-    "  - Conclusion  \n",
-    "  - Key Insights  \n",
     "- **3.4** Optimizer Tuning for Best Architecture ([256, 128, 64, 32, 16], ReLU)  \n",
     "- **3.4** Optimizer Comparison for Best Architecture ([256, 128, 64, 32, 16], ReLU)  \n",
-    "  - Conclusion  \n",
-    "  - Key Insights  \n",
     "- **3.5** PyTorch Lightning for Best Architecture ([256, 128, 64, 32, 16], ReLU, SGD)  \n",
     "- **3.5** PyTorch Manual and Lightning Comparison for Best Architecture ([256, 128, 64, 32, 16], ReLU, SGD)  \n",
-    "  - Conclusion  \n",
     "- **3.6** 1D Convolution  \n",
     "- **3.7** 2D Convolution  \n",
     "- **3.8** Conclusions: 2D Convolution and Edge Detection  "
